--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@types/tabulator-tables": "^4.9.3",
     "bootstrap": "^5.1.0",
     "popper": "^1.0.1",
     "rxjs": "~6.6.0",
+    "tabulator-tables": "^4.9.3",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
