Worked on Gallery and Menu Hamburger

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@ngmodule/material-carousel": "^0.6.0",
     "@types/tabulator-tables": "^4.9.3",
+    "angular-responsive-carousel": "^2.1.2",
     "bootstrap": "^5.1.0",
     "popper": "^1.0.1",
     "rxjs": "~6.6.0",
