--- a/src/assets/db-appendix.json
+++ b/src/assets/db-appendix.json
@@ -144,5 +144,13 @@
     "Comments": "Use this if you are not using material tabs",
     "Type": "Documentation",
     "Topic": "Angular"
+  },
+  {
+    "id": 20,
+    "Reference": "Setting up a local json for HTTP requests",
+    "Link": "https://stackoverflow.com/questions/44042223/load-json-from-local-file-with-http-get-in-angular-2",
+    "Comments": "",
+    "Type": "Documentation",
+    "Topic": "Angular"
   }
 ]
