--- a/angular.json
+++ b/angular.json
@@ -92,12 +92,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              { "glob": "package.json", "input": "../", "output": "./assets/" },
-              { "glob": "data.json", "input": "./", "output": "./assets/" }
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
